rabbit/manifests/rabbit-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq
spec: 
  serviceName: "not-applicable"
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:3-management
        ports:
        - name: amqp
          protocol: TCP
          containerPort: 5672
        - name: http
          protocol: TCP
          containerPort: 15672
        volumeMounts:
        - name: rabbitmq-volume
          mountPath: /var/lib/rabbitmq
        - name: rabbitmq-definitions
          mountPath: /etc/rabbitmq/definitions.json
          subPath: definitions.json
      volumes:
      - name: rabbitmq-configmap
        configMap:
          name: rabbitmq-configmap
  volumeClaimTemplates:
  - metadata:
      name: rabbitmq-volume
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
